Fix nav z-index's

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -166,6 +166,7 @@ a {
 }
 
 @media (min-width: 768px) {
+
     .mobile-menu {
         display: none;
     }
@@ -173,7 +174,7 @@ a {
     .desktop-menu {
         display: flex!important;
         justify-content: space-between;
-        width: 350px;
+        width: 380px;
     }
 
     .social-media-icons {
@@ -187,6 +188,7 @@ a {
         position: absolute;
         right: 15px;
         top: 30%;
+        z-index: 2;
     }
 
     .social-media-icons i {
@@ -220,6 +222,11 @@ a {
         position: initial;
         flex-direction: row;
         width: 150px;
+    }
+
+    .page-nav {
+        position: relative;
+        z-index: 1;
     }
 }
 
